--- a/OpenTKTesting/OpenTKTesting.csproj
+++ b/OpenTKTesting/OpenTKTesting.csproj
@@ -6,6 +6,7 @@
     <ApplicationIcon />
     <StartupObject />
     <UseWindowsForms>true</UseWindowsForms>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
