--- a/OpenTKTesting/OpenTKTesting.csproj
+++ b/OpenTKTesting/OpenTKTesting.csproj
@@ -5,12 +5,12 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <ApplicationIcon />
     <StartupObject />
-    <UseWindowsForms>true</UseWindowsForms>
     <Platforms>x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="OpenTK" Version="3.1.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0007" />
     <PackageReference Include="System.Drawing.Common" Version="4.6.1" />
   </ItemGroup>
 
