--- a/SDLWithOpenGL/SDLWithOpenGL.csproj
+++ b/SDLWithOpenGL/SDLWithOpenGL.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWPF>true</UseWPF>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
