Improve creating blending shaders and fix bug

--- a/OpenTKTesting/OpenTKTesting.csproj
+++ b/OpenTKTesting/OpenTKTesting.csproj
@@ -19,6 +19,9 @@
     <None Update="Content\Gear.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Content\Link.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Shaders\shader.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
