--- a/RenderWindowTesting/RenderWindowTesting.csproj
+++ b/RenderWindowTesting/RenderWindowTesting.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <ApplicationIcon />
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <StartupObject />
     <Platforms>x64</Platforms>
   </PropertyGroup>
