Multiple texture rendering

--- a/WPFTestingUI/WPFTestingUI.csproj
+++ b/WPFTestingUI/WPFTestingUI.csproj
@@ -17,6 +17,9 @@
     <None Update="Content\Link.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Content\Sword.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Shaders\shader.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
