--- a/OpenTKTesting/OpenTKTesting.csproj
+++ b/OpenTKTesting/OpenTKTesting.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="OpenTK" Version="3.1.0" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0007" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.1" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
